--- a/app/src/main/res/layout/past_quiz_view.xml
+++ b/app/src/main/res/layout/past_quiz_view.xml
@@ -32,7 +32,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/dateText"
+                android:id="@+id/finishDateText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
